Issue #25677: Correct syntax error caret for indented blocks.

Based on patch by Michael Layzell.